--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 authors = ["Jorge Aparicio <japaricious@gmail.com>"]
-name = "float"
-version = "0.0.0"
+license = "MIT OR Apache-2.0"
+name = "floaty"
+version = "0.1.0"
+
+[features]
+unstable = []
 
 [dependencies.cast]
 git = "https://github.com/japaric/cast.rs"
